1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ProbeMap.m, VarProbe.m: Include misc.h instead of string.h.

1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (Probe): Add argument to setProbeClass.

	* CustomProbeMap.m: Include stdarg.h first to avoid problems on
	Redhat 5.
	
1998-07-06  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h (Arguments): Further clarify use of Arguments with
	main.m program fragment in Example.

1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (version.h): Quote SWARM_VERSION value.
	($(libobjectbase_la_OBJECTS)): Depend on version.h.
	(objectbase_HEADERS): Remove version.h.
	(install-data-local): New rule.

1998-06-24  Alex Lancaster  <alex@santafe.edu>

	* objectbase.h: (Arguments): Add protocol.  Add documentation
	description for Arguments, including long example marked-up with
	//E:.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* CompleteProbeMap.m, CompleteVarMap.m, CustomProbeMap.m,
	DefaultProbeMap.m, Probe.m, ProbeMap.m, VarProbe.m:  Use
	[Warning raiseEvent: ..] instead of fprintf.

	* Makefile.am (lib_LIBRARIES, libobjectbase_a_SOURCES): Remove.
	(noinst_HEADERS): Include local.h.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libobjectbase_la_SOURCES,
	libobjectbase_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-17  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Document Swarm.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Update documentation tags.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* objectbase.h: Include defobj.h.

	* Probe.m: Include collections.h.

	* ActivityControl.[hm]: Include activity.h.

1998-05-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
