@@ -1,3 +1,7 @@
+1998-07-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Arguments.m: Include misc things after other includes.
+
 1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ProbeMap.m, VarProbe.m: Include misc.h instead of string.h.
